fix risk pop up on mobile

--- a/packages/react-app/src/components/atoms/riskModal.module.css
+++ b/packages/react-app/src/components/atoms/riskModal.module.css
@@ -75,7 +75,6 @@
   padding : 3em;
   left : 50%;
   top : 50%;
-  width : 33%;
   transform : translate(-50%,-50%);
   z-index : 2;
 }
